Fix core chrome header logo alignment
- remove now-empty `euiHeaderLogo` css, replace it with custom Kibana CSS (since this component isn't actually using EuiHeaderLogo)

- using Sass for expedience, but these should likely be converted to CSS-in-JS at some point

--- a/packages/core/chrome/core-chrome-browser-internal/src/ui/header/header_logo.scss
+++ b/packages/core/chrome/core-chrome-browser-internal/src/ui/header/header_logo.scss
@@ -1,3 +1,9 @@
+.chrHeaderLogo {
+  display: flex;
+  align-items: center;
+  padding-inline: $euiSizeS;
+}
+
 .chrHeaderLogo__mark {
   margin-left: $euiSizeS;
   fill: $euiColorGhost;
